--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asgiref==3.8.1
 Django==5.1.3
-django-cors-headers==4.6.0
 djangorestframework==3.15.2
+whitenoise
+asgiref==3.8.1
 sqlparse==0.5.2
-whitenoise==6.8.2
+tzdata==2024.2
